<resources>
    <string name="app_name">KrishiSmarak</string>
    <string name="TermsConditions">By continuing you agree to the Terms and Conditions</string>
    <string name="Moto">Aane waale kal ki kheti aaj</string>
    <string name="Title">KrishiSmarak</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a User?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="logout">LOGOUT</string>
</resources>